--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
         </section>
 
         <button id="theme-toggle">Trocar Tema</button>
+
+        <h1>Galeria de Imagens</h1>
+        <div class="gallery">
+            <figure>
+                <img src="image 1.jpg" alt="Homem visualizando um painela com óculos virtual.">
+                <figcaption>Imagem 1</figcaption>
+            </figure>
+            <figure>
+                <img src="image 2.jpg" alt="Pessoa mexendo em um computador, analisando os dados.">
+                <figcaption>Imagem 2</figcaption>
+            </figure>
+            <figure>
+                <img src="image 3.jpg" alt="Imagem de conexões.">
+                <figcaption>Imagem 3</figcaption>
+            </figure>
+            <figure>
+                <img src="image 4.jpg" alt="Mulher mexendo com análise de dados.">
+                <figcaption>Imagem 4</figcaption>
+            </figure>
+        </div>
+
+        <div id="image-info" class="image-info"></div>
     </main>
 
     <footer>
